se ajusto la lluvia  y la flor

--- a/main.html
+++ b/main.html
@@ -15,6 +15,7 @@
     <img class="arbol" src="/img/arbol.png">
     <img class="sol" src="/img/sol.png">
     <img class="casa" src="/img/casa_png.png">
+    <img class="gotas" src="/img/gotas-01.gif">
 </div>
 
 
