se ajusto la ruta de imagenes

--- a/main.html
+++ b/main.html
@@ -9,19 +9,19 @@
 <body>
     <div class="container">
     <div class="sup">
-    <img class="nube" src="/img/nube_png.png">
-    <img class="casa" src="/img/casa.png">
+    <img class="nube" src="img/nube_png.png">
+    <img class="casa" src="img/casa.png">
     
-    <img class="arbol" src="/img/arbol.png">
-    <img class="sol" src="/img/sol.png">
-    <img class="casa" src="/img/casa_png.png">
-    <img class="gotas" src="/img/gotas-01.gif">
+    <img class="arbol" src="img/arbol.png">
+    <img class="sol" src="img/sol.png">
+    <img class="casa" src="img/casa_png.png">
+    <img class="gotas" src="img/gotas-01.gif">
 </div>
 
 
 </div>
 <div class="piso">
-    <img class="flor" src="/img/flor.png">
+    <img class="flor" src="img/flor.png">
 
 </div>
     
